<resources>
    <string name="app_name">BIA test app</string>
    <string name="resend_code_timer">Выслать повторный код (00:%s)</string>
    <string name="resend_code">Выслать повторный код</string>
    <string name="tasks">Задания</string>
    <string name="task_details">Детали задания</string>
    <string name="timetable">Графики</string>
    <string name="chat">Чат</string>
    <string name="profile">Профиль</string>
    <string name="download">Скачать</string>
    <string name="next">Продолжить</string>
    <string name="submit">Принять</string>
    <string name="decline">Отказаться</string>
    <string name="cargo_type">Тип груза</string>
    <string name="city_details">Город исполнения</string>
    <string name="date_details">Дата заказа</string>
    <string name="time_details">Время прибытия</string>
    <string name="start_point_details">Начальная точка маршрута</string>
    <string name="end_point_details">Конечная точка маршрута</string>
    <string name="body_type_details">Тип кузова</string>
    <string name="order_details">Детали заказа</string>
    <string name="pay_order_details">Параметры по оплате</string>
    <string name="contact_details">Контакты</string>
    <string name="client_rules">Правила клиента</string>
    <string name="incident">Инцидент</string>
    <string name="error">Ошибка</string>
    <string name="attach_documents">Прикрепить документы</string>
    <string name="documents">Документы</string>
    <string name="end_task">Завершить заказ</string>
    <string name="decline_task">Отказаться от задания</string>
    <string name="tip_text">Для завершения заказа необходимо прикрепить документы</string>
    <string name="task_status">Текущее задание</string>
    <string name="show_details">Посмотреть детали</string>
    <string name="task_done">Работа выполнена</string>
    <string name="task_done_success">Задание было успешно выполнено</string>
    <string name="choose_what_happened">Выберите что произошло</string>
    <string name="address_problem">Проблема на адресе</string>
    <string name="problem_on_the_way">Проблема в пути</string>
    <string name="load_problem">Проблема на загрузке</string>
    <string name="save">Сохранить</string>
    <string name="for_end_task">Для завершения заказа необходимо прикрепить документы</string>
    <string name="add_photo">Добавить фото</string>
    <string name="task_decline">Работа отклонена</string>
    <string name="task_decline_details">Задание было отклонено</string>
    <string name="rules_toast">Правила загружены в downloads</string>
    <string name="documents_toast">Документы загружены</string>
    <string name="documents_load_toast">Загрузка документов</string>
    <string name="cancel">Отменить</string>
    <string name="work_day">Рабочий день</string>
    <string name="rest_day">Выходной день</string>
    <string name="month_year">%s %s</string>
    <string name="selected_date">%s %s %s</string>
    <string name="timetable_days">График смен</string>
    <string name="loaded">Загружены</string>
    <string name="number_in_company">Табельный №</string>
    <string name="phone_number">Номер телефона</string>
    <string name="citizenship">Гражданство</string>
    <string name="car">Машина</string>
    <string name="car_number">Номера</string>
    <string name="sick_list">Больничный лист</string>
    <string name="sick_list_title">Больничный</string>
    <string name="notice">Оповещения</string>
    <string name="log_out">Выйти</string>
    <string name="no_sick_lists">Нет активных больничных</string>
    <string name="choose">Выбрать</string>
    <string name="choose_range">Выбрать %s</string>
    <string name="clean">Очистить</string>
    <string name="new_sick_item">Новый больничный</string>
    <string name="sick_list_item_range">%s - %s</string>
    <string name="close_sick_list">Закрыть больничный</string>
</resources>