<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        style="@style/DetailsBottomTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_what_happened"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/task_container"
        app:layout_constraintTop_toBottomOf="@id/title">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/address_problem_button"
            style="@style/RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_problem" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/way_problem_button"
            style="@style/RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problem_on_the_way"
            android:textAppearance="@style/DetailsTextView" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/load_problem_button"
            style="@style/RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/load_problem"
            android:textAppearance="@style/DetailsTextView" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_button"
        style="@style/TaskDeclineButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>