<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/order_details_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/task_details_container">

    <TextView
        android:id="@+id/cargo_type"
        style="@style/DetailsTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/cargo_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cargo_type_details"
        style="@style/DetailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/cargo_type"
        app:layout_constraintTop_toBottomOf="@id/cargo_type"
        tools:text="Мебель" />

    <TextView
        android:id="@+id/city_details"
        style="@style/DetailsTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/cargo_type_details"
        app:layout_constraintTop_toBottomOf="@id/cargo_type_details"
        android:text="@string/city_details" />

    <TextView
        android:id="@+id/city"
        style="@style/DetailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/city_details"
        app:layout_constraintTop_toBottomOf="@id/city_details"
        tools:text="Москва" />

    <TextView
        android:id="@+id/date_details"
        style="@style/DetailsTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/city"
        app:layout_constraintTop_toBottomOf="@id/city"
        android:text="@string/date_details" />

    <TextView
        android:id="@+id/date"
        style="@style/DetailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/date_details"
        app:layout_constraintTop_toBottomOf="@id/date_details"
        tools:text="18.04.2023" />

    <TextView
        android:id="@+id/time_details"
        style="@style/DetailsTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/date"
        app:layout_constraintTop_toBottomOf="@id/date"
        android:text="@string/time_details" />

    <TextView
        android:id="@+id/time"
        style="@style/DetailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/time_details"
        app:layout_constraintTop_toBottomOf="@id/time_details"
        tools:text="12:00" />

    <TextView
        android:id="@+id/start_point_details"
        style="@style/DetailsTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/time"
        app:layout_constraintTop_toBottomOf="@id/time"
        android:text="@string/start_point_details" />

    <TextView
        android:id="@+id/start_point"
        style="@style/DetailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue_link"
        app:layout_constraintStart_toStartOf="@id/start_point_details"
        app:layout_constraintTop_toBottomOf="@id/start_point_details"
        tools:text="Склад 51, Ул. Пушкина 124Б" />

    <TextView
        android:id="@+id/end_point_details"
        style="@style/DetailsTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_point"
        app:layout_constraintTop_toBottomOf="@id/start_point"
        android:text="@string/end_point_details" />

    <TextView
        android:id="@+id/end_point"
        style="@style/DetailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue_link"
        app:layout_constraintStart_toStartOf="@id/end_point_details"
        app:layout_constraintTop_toBottomOf="@id/end_point_details"
        tools:text="Склад 38, Ул. Розенбаума 89" />

    <TextView
        android:id="@+id/body_type_details"
        style="@style/DetailsTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/end_point"
        app:layout_constraintTop_toBottomOf="@id/end_point"
        android:text="@string/body_type_details" />

    <TextView
        android:id="@+id/body_type"
        style="@style/DetailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/body_type_details"
        app:layout_constraintTop_toBottomOf="@id/body_type_details"
        tools:text="Тентованный" />

    <TextView
        android:id="@+id/order_details"
        style="@style/DetailsTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/body_type"
        app:layout_constraintTop_toBottomOf="@id/body_type"
        android:text="@string/order_details" />

    <TextView
        android:id="@+id/order"
        style="@style/DetailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/order_details"
        app:layout_constraintTop_toBottomOf="@id/order_details"
        tools:text="Прописанные детали заказа" />

    <TextView
        android:id="@+id/pay_order_details"
        style="@style/DetailsTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/order"
        app:layout_constraintTop_toBottomOf="@id/order"
        android:text="@string/pay_order_details" />

    <TextView
        android:id="@+id/pay_details"
        style="@style/DetailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/pay_order_details"
        app:layout_constraintTop_toBottomOf="@id/pay_order_details"
        tools:text="Прописанные параметры по оплате" />

    <TextView
        android:id="@+id/contact_details"
        style="@style/DetailsTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/pay_details"
        app:layout_constraintTop_toBottomOf="@id/pay_details"
        android:text="@string/contact_details" />

    <TextView
        android:id="@+id/contact"
        style="@style/DetailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue_link"
        app:layout_constraintStart_toStartOf="@id/contact_details"
        app:layout_constraintTop_toBottomOf="@id/contact_details"
        tools:text="+7 800 896 52 63" />

    <TextView
        android:id="@+id/contact_name"
        style="@style/DetailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toStartOf="@id/contact"
        app:layout_constraintTop_toBottomOf="@id/contact"
        tools:text="Иванов Владимир Иосифович" />

</androidx.constraintlayout.widget.ConstraintLayout>