<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/incident_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/task_details_container"
        app:layout_constraintTop_toTopOf="parent">
        
        <TextView
            style="@style/DetailsBottomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incident"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/incident_button"
            style="@style/TaskImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/error_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/task_details_container"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/incident_container">

        <TextView
            style="@style/DetailsBottomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/error_button"
            style="@style/TaskImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/documents_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/task_details_container"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/error_container">

        <TextView
            style="@style/DetailsBottomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attach_documents"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/documents_button"
            style="@style/TaskImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/TaskDeclineButton"
        android:id="@+id/end_task_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_task"
        app:layout_constraintTop_toBottomOf="@id/documents_container"/>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/TaskDeclineButton"
        android:id="@+id/decline_task_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/decline_task"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/end_task_button"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip_text"
        android:layout_marginTop="12dp"
        android:textSize="14sp"
        android:fontFamily="@font/stolzl_book"
        android:textColor="@color/middle_gray_blue"
        app:layout_constraintTop_toBottomOf="@id/decline_task_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>