<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        style="@style/DetailsBottomTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/for_end_task"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingTop="0dp"
        android:background="@drawable/task_container"
        app:layout_constraintTop_toBottomOf="@id/title">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/documents_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingTop="8dp"
            tools:listitem="@layout/documents_item"
            tools:itemCount="2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_photo_button"
            style="@style/IconButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/documents_list"
            android:text="@string/add_photo"
            app:icon="@drawable/ic_attach"
            app:iconGravity="textStart" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_button"
        style="@style/ActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/end_task"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>