<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/top_text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Рабочий"
                android:textSize="12sp"
                android:fontFamily="@font/stolzl_regular"
                android:textColor="@color/dark_grey"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:background="@drawable/calendar_top_text_container"
                android:backgroundTint="@color/gray"/>

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:background="@color/gray"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Выходной"
                android:textSize="12sp"
                android:fontFamily="@font/stolzl_regular"
                android:textColor="@color/dark_grey"
                android:textAlignment="center"
                android:layout_weight="1"
                android:background="@drawable/calendar_top_text_container"
                android:backgroundTint="@color/white"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

        <include
            android:id="@+id/calendar_view"
            layout="@layout/calendar_view"
            android:layout_marginTop="16dp"
            android:layout_below="@id/top_text_container"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pick_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@drawable/default_container"
            android:layout_below="@id/calendar_view">

            <TextView
                android:id="@+id/date"
                style="@style/DetailsTextView"
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAlignment="center"
                android:fontFamily="@font/stolzl_bold"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/shift"
                style="@style/DetailsTypeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAlignment="center"
                android:text="Смена"
                android:fontFamily="@font/stolzl_bold"
                app:layout_constraintTop_toBottomOf="@id/date"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_picker_container"
                style="@style/TextPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/shift">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    style="@style/DetailsTextView"
                    android:id="@+id/text_picker"
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:inputType="none"
                    android:text="@string/work_day"
                    android:background="@drawable/text_peek_container"
                    android:focusableInTouchMode="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_button"
                style="@style/ActionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/save"
                app:layout_constraintTop_toBottomOf="@id/text_picker_container"/>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/TaskDeclineButton"
                android:id="@+id/decline_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/save_button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>

